cart  drawer  issue on mobile

--- a/assets/section-main-product-custombundle.css
+++ b/assets/section-main-product-custombundle.css
@@ -613,6 +613,7 @@
     .progress-container {
         display: flex;
         align-items: baseline;
+        justify-content: space-between;
     }
     .custom-bundle .cartcolumn{
         /* background-color: #fff; */
